shopcloud/manifests/cluster/service-block-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: block-admin
  namespace: app
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
